Introduced Eclipse Collections (to replace Vavr)