@@ -1,23 +1,24 @@
 package edu.boardgames.collections.explorer.infrastructure.bgg;
 
-import io.vavr.collection.Stream;
-
 import java.util.Comparator;
 import java.util.StringJoiner;
+
+import org.eclipse.collections.api.RichIterable;
+import org.eclipse.collections.api.list.MutableList;
 
 public class PlayerCountPoll {
 	private final int bestVotes;
 	private final int recommendedVotes;
 	private final int notRecommendedVotes;
 
-	protected PlayerCountPoll(Stream<? extends PlayerCountVotes> votes) {
-		if (votes.length() != 3) {
-			throw new IllegalArgumentException(String.format("Expecting only 3 vote elements: %s", String.join(", ", votes.map(PlayerCountVotes::toString))));
+	protected PlayerCountPoll(RichIterable<? extends PlayerCountVotes> votes) {
+		if (votes.size() != 3) {
+			throw new IllegalArgumentException("Expecting only 3 vote elements: %s".formatted(String.join(", ", votes.collect(PlayerCountVotes::toString))));
 		}
-		Stream<? extends PlayerCountVotes> sorted = votes.sorted(Comparator.comparing(PlayerCountVotes::poll));
-		this.bestVotes = sorted.head().voteCount();
-		this.recommendedVotes = sorted.tail().last().voteCount();
-		this.notRecommendedVotes = sorted.tail().head().voteCount();
+		MutableList<? extends PlayerCountVotes> sorted = votes.toSortedList(Comparator.comparing(PlayerCountVotes::poll));
+		this.bestVotes = sorted.getFirst().voteCount();
+		this.recommendedVotes = sorted.getLast().voteCount();
+		this.notRecommendedVotes = sorted.get(1).voteCount();
 	}
 
 	public int bestVotes() {
